@@ -10,6 +10,7 @@ import com.extremelyd1.game.team.PlayerTeam;
 import com.extremelyd1.game.team.Team;
 import com.extremelyd1.game.team.TeamManager;
 import com.extremelyd1.game.timer.GameTimer;
+import com.extremelyd1.game.winCondition.HoldModeHelper;
 import com.extremelyd1.game.winCondition.WinConditionChecker;
 import com.extremelyd1.game.winCondition.WinReason;
 import com.extremelyd1.gameboard.GameBoardManager;
@@ -21,11 +22,13 @@ import com.extremelyd1.title.TitleManager;
 import com.extremelyd1.util.*;
 import com.extremelyd1.world.WorldManager;
 import com.extremelyd1.world.spawn.SpawnLoader;
+import io.papermc.paper.command.brigadier.BasicCommand;
+import io.papermc.paper.plugin.lifecycle.event.types.LifecycleEvents;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.*;
-import org.bukkit.command.CommandExecutor;
-import org.bukkit.command.PluginCommand;
+import org.bukkit.attribute.Attribute;
+import org.bukkit.attribute.AttributeInstance;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
@@ -36,17 +39,6 @@ import java.util.*;
 import java.util.logging.Logger;
 
 public class Game {
-
-    /**
-     * The prefix string
-     */
-    public static final String PREFIX = ChatColor.BOLD.toString() + ChatColor.BLUE + "BINGO " + ChatColor.RESET;
-    /**
-     * The divider string
-     */
-    private static final String DIVIDER = PREFIX + ChatColor.STRIKETHROUGH
-            + "                                                                        ";
-
     /**
      * The plugin instance
      */
@@ -89,6 +81,9 @@ public class Game {
      */
     private final WinConditionChecker winConditionChecker;
 
+    // fallen's fork: add "hold" mode
+    private final HoldModeHelper holdModeHelper;
+
     /**
      * The sound manager instance
      */
@@ -113,7 +108,7 @@ public class Game {
     /**
      * Whether PvP is enabled
      */
-    private boolean pvpEnabled = false;
+    private boolean pvpDisabled = true;
 
     /**
      * The bingo card that is currently used
@@ -147,13 +142,14 @@ public class Game {
         worldManager = new WorldManager(this);
 
         gameBoardManager = new GameBoardManager(this);
-        teamManager = new TeamManager(this);
+        teamManager = new TeamManager();
 
         bingoCardItemFactory = new BingoCardItemFactory(this);
         bingoItemMaterials = new BingoItemMaterials(this);
         bingoItemMaterials.loadMaterials(getDataFolder());
 
         winConditionChecker = new WinConditionChecker(config);
+        holdModeHelper = new HoldModeHelper(this, winConditionChecker, teamManager);
 
         chatChannelController = new ChatChannelController();
 
@@ -172,12 +168,12 @@ public class Game {
      */
     private void registerListeners(JavaPlugin plugin) {
         Bukkit.getPluginManager().registerEvents(this.worldManager, plugin);
-        Bukkit.getPluginManager().registerEvents(new PlayerJoinLeaveListener(this), plugin);
-        Bukkit.getPluginManager().registerEvents(new ItemListener(this), plugin);
+        Bukkit.getPluginManager().registerEvents(new PlayerJoinLeaveListener(this, bingoCardItemFactory), plugin);
+        Bukkit.getPluginManager().registerEvents(new ItemListener(this, bingoCardItemFactory), plugin);
         Bukkit.getPluginManager().registerEvents(new ChatListener(this), plugin);
         Bukkit.getPluginManager().registerEvents(new MotdListener(this), plugin);
-        Bukkit.getPluginManager().registerEvents(new DeathListener(this), plugin);
-        Bukkit.getPluginManager().registerEvents(new InteractListener(this), plugin);
+        Bukkit.getPluginManager().registerEvents(new DeathListener(this, bingoCardItemFactory), plugin);
+        Bukkit.getPluginManager().registerEvents(new InteractListener(this, bingoCardItemFactory), plugin);
         Bukkit.getPluginManager().registerEvents(new DamageListener(this), plugin);
         Bukkit.getPluginManager().registerEvents(new FoodListener(this), plugin);
         Bukkit.getPluginManager().registerEvents(new MoveListener(this), plugin);
@@ -189,44 +185,44 @@ public class Game {
     }
 
     /**
-     * Register all commands
-     * @param plugin The plugin instance to register the commands to
+     * Register all commands.
+     * @param plugin The plugin instance to register the commands to.
      */
+    @SuppressWarnings("UnstableApiUsage")
     private void registerCommands(JavaPlugin plugin) {
-        final Game game = this;
-        final Map<String, CommandExecutor> executors = new HashMap<>() {{
-            put("team", new TeamCommand(game));
-            put("start", new StartCommand(game));
-            put("end", new EndCommand(game));
-            put("bingo", new BingoCommand(game));
-            put("card", new CardCommand(game));
-            put("pvp", new PvpCommand(game));
-            put("maintenance", new MaintenanceCommand(game));
-            put("wincondition", new WinConditionCommand(game));
-            put("reroll", new RerollCommand(game));
-            put("itemdistribution", new ItemDistributionCommand(game));
-            put("timer", new TimerCommand(game));
-            put("coordinates", new CoordinatesCommand(game));
-            put("all", new AllCommand(game));
-            put("channel", new ChannelCommand(game));
-            put("teamchat", new TeamChatCommand(game));
-            put("join", new JoinCommand(game));
+        plugin.getLifecycleManager().registerEventHandler(LifecycleEvents.COMMANDS, event -> {
+            final Game game = this;
+            final Map<String[], BasicCommand> commands = new HashMap<>() {{
+                put(new String[] {"team"}, new TeamCommand(game));
+                put(new String[] {"start"}, new StartCommand(game));
+                put(new String[] {"end"}, new EndCommand(game));
+                put(new String[] {"bingo"}, new BingoCommand(game));
+                put(new String[] {"card"}, new CardCommand(game, bingoCardItemFactory));
+                put(new String[] {"pvp"}, new PvpCommand(game));
+                put(new String[] {"maintenance"}, new MaintenanceCommand(game));
+                put(new String[] {"wincondition", "wincon"}, new WinConditionCommand(game));
+                put(new String[] {"reroll"}, new RerollCommand(game));
+                put(new String[] {"itemdistribution", "itemdist", "distribution", "dist"}, new ItemDistributionCommand(game));
+                put(new String[] {"timer"}, new TimerCommand(game));
+                put(new String[] {"coordinates", "coord", "coords"}, new CoordinatesCommand(game));
+                put(new String[] {"all", "a", "g", "global"}, new AllCommand(game));
+                put(new String[] {"channel", "c"}, new ChannelCommand(game));
+                put(new String[] {"teamchat", "tc"}, new TeamChatCommand(game));
+                put(new String[] {"join"}, new JoinCommand(game));
 
-            if (config.isPreGenerateWorlds()) {
-                put("generate", new GenerateCommand(game));
-            } else {
-                put("generate", new DisabledCommand());
-            }
-        }};
+                if (config.isPreGenerateWorlds()) {
+                    put(new String[] {"generate", "gen"}, new GenerateCommand(game));
+                } else {
+                    put(new String[] {"generate", "gen"}, new DisabledCommand());
+                }
+            }};
 
-        for (String cmdName : executors.keySet()) {
-            PluginCommand command = plugin.getCommand(cmdName);
-            if (command != null) {
-                command.setExecutor(executors.get(cmdName));
-            } else {
-                throw new IllegalStateException("Command " + cmdName + " could not be registered");
+            for (Map.Entry<String[], BasicCommand> entry : commands.entrySet()) {
+                for (String commandName : entry.getKey()) {
+                    event.registrar().register(commandName, entry.getValue());
+                }
             }
-        }
+        });
     }
 
     /**
@@ -246,9 +242,11 @@ public class Game {
             getLogger().warning("No teams have been selected, cannot start game");
 
             if (player != null) {
-                player.sendMessage(
-                        ChatColor.DARK_RED + "Error: "
-                                + ChatColor.WHITE + "No teams have been selected, cannot start game"
+                player.sendMessage(ChatUtil.errorPrefix()
+                        .append(Component
+                                .text("No teams have been selected, cannot start game")
+                                .color(NamedTextColor.WHITE)
+                        )
                 );
             }
 
@@ -258,9 +256,11 @@ public class Game {
             getLogger().warning("Game is starting, please be patient");
 
             if (player != null) {
-                player.sendMessage(
-                        ChatColor.DARK_RED + "Error: "
-                                + ChatColor.WHITE + "Game is starting, please be patient"
+                player.sendMessage(ChatUtil.errorPrefix()
+                        .append(Component
+                                .text("Game is starting, please be patient")
+                                .color(NamedTextColor.WHITE)
+                        )
                 );
             }
 
@@ -286,8 +286,11 @@ public class Game {
         );
 
         if (player != null) {
-            player.sendMessage(
-                    Game.PREFIX + "Preparing spawn locations for teams..."
+            player.sendMessage(ChatUtil.waitPrefix()
+                    .append(Component
+                            .text("Preparing spawn locations for teams...")
+                            .color(NamedTextColor.WHITE)
+                    )
             );
         }
 
@@ -302,13 +305,19 @@ public class Game {
      */
     private void onSpawnsLoaded(Player player, List<Location> locations) {
         if (player != null) {
-            player.sendMessage(
-                    Game.PREFIX + "Spawn locations found, starting game"
+            player.sendMessage(ChatUtil.successPrefix()
+                    .append(Component
+                            .text("Spawn locations found, starting game")
+                            .color(NamedTextColor.WHITE)
+                    )
             );
         }
 
         this.state = State.IN_GAME;
         this.gameStarting = false;
+
+        // Clear previously created bingo cards
+        bingoCardItemFactory.clearCreatedBingoCards();
 
         // Create random bingo card
         bingoCard = new BingoCard(bingoItemMaterials.pickMaterials(), winConditionChecker.getCompletionsToLock());
@@ -326,10 +335,11 @@ public class Game {
 
                 int freezeTimeOnStart = config.getFreezeTimeOnStart();
                 if (freezeTimeOnStart > 0) {
+                    Objects.requireNonNull(teamPlayer.getAttribute(Attribute.MOVEMENT_SPEED)).setBaseValue(0);
+                    Objects.requireNonNull(teamPlayer.getAttribute(Attribute.JUMP_STRENGTH)).setBaseValue(0);
+
                     teamPlayer.addPotionEffect(PotionEffects.BLINDNESS.withDuration(freezeTimeOnStart * 20));
                     teamPlayer.addPotionEffect(PotionEffects.DARKNESS.withDuration(freezeTimeOnStart * 20));
-                    teamPlayer.addPotionEffect(PotionEffects.SLOWNESS.withDuration(freezeTimeOnStart * 20));
-                    teamPlayer.addPotionEffect(PotionEffects.JUMP.withDuration(freezeTimeOnStart * 20));
                 }
 
                 teamPlayer.teleport(location);
@@ -359,6 +369,27 @@ public class Game {
             }
         }
 
+        int freezeTimeOnStart = config.getFreezeTimeOnStart();
+        if (freezeTimeOnStart > 0) {
+            // If there is a freeze time on start, we schedule a task to run after the freeze time is over to reset
+            // the players' movement speed and jump strength to normal
+            Bukkit.getScheduler().runTaskLater(getPlugin(), () -> {
+                for (PlayerTeam team : teamManager.getActiveTeams()) {
+                    for (Player teamPlayer : team.getPlayers()) {
+                        AttributeInstance moveSpeedAttr = teamPlayer.getAttribute(Attribute.MOVEMENT_SPEED);
+                        if (moveSpeedAttr != null) {
+                            moveSpeedAttr.setBaseValue(0.10000000149011612);
+                        }
+
+                        AttributeInstance jumpStrengthAttr = teamPlayer.getAttribute(Attribute.JUMP_STRENGTH);
+                        if (jumpStrengthAttr != null) {
+                            jumpStrengthAttr.setBaseValue(0.41999998688697815);
+                        }
+                    }
+                }
+            }, freezeTimeOnStart * 20L);
+        }
+
         for (Player spectatorPlayer : teamManager.getSpectatorTeam().getPlayers()) {
             spectatorPlayer.setGameMode(GameMode.SPECTATOR);
 
@@ -382,10 +413,15 @@ public class Game {
         gameBoardManager.broadcast();
 
         // Broadcast start message
-        Bukkit.broadcastMessage(
-                DIVIDER + "\n"
-                        + PREFIX + "                           Game has started!\n"
-                        + DIVIDER
+        Bukkit.broadcast(
+                ChatUtil.divider()
+                        .append(Component.newline())
+                        .append(Component
+                                .text(" ".repeat(28) + "Game has started!")
+                                .color(NamedTextColor.WHITE)
+                        )
+                        .append(Component.newline())
+                        .append(ChatUtil.divider())
         );
 
         // Send sounds
@@ -396,6 +432,7 @@ public class Game {
             // for "quidditch" mode
             team.setGotGoldenSnitch(false);
         }
+        holdModeHelper.onGameStart();
 
         if (config.isTimerEnabled()) {
             // Start timer
@@ -426,26 +463,28 @@ public class Game {
     }
 
     public void showItemCollectedInTabList() {
-        StringBuilder footer = new StringBuilder();
+        var footer = Component.text();
         int i = 0;
         for (PlayerTeam team : teamManager.getActiveTeams()) {
             if (i > 0) {
-                footer.append(ChatColor.GRAY).append(i % 3 == 0 ? "\n" : ", ");
+                footer.append(Component.text(i % 3 == 0 ? "\n" : ", ").color(NamedTextColor.GRAY));
             }
             i++;
-            footer.append(team.getColor()).append(team.getName()).append(": ").
+            StringBuilder builder = new StringBuilder();
+            builder.append(team.getName()).append(": ").
                     append(bingoCard.getNumLinesComplete(team)).append("/").append(team.getNumCollected());
             if (winConditionChecker.isQuidditchMode() && team.isGotGoldenSnitch()) {
-                footer.append(" +").append(config.getQuidditchGoldenSnitchBonus());
+                builder.append(" +").append(config.getQuidditchGoldenSnitchBonus());
             }
+            footer.append(Component.text(builder.toString()).color(team.getColor()));
         }
         for (PlayerTeam team : teamManager.getActiveTeams()) {
             for (Player p : team.getPlayers()) {
-                p.setPlayerListFooter(footer.toString());
+                p.sendPlayerListFooter(footer.build());
             }
         }
         for (Player p : teamManager.getSpectatorTeam().getPlayers()) {
-            p.setPlayerListFooter(footer.toString());
+            p.sendPlayerListFooter(footer.build());
         }
     }
 
@@ -458,28 +497,35 @@ public class Game {
         // update the tablist on game end
         this.showItemCollectedInTabList();
 
-        String message = DIVIDER + "\n" + PREFIX;
+        // fallen's fork: add log message showing the game ends
+        Game.getLogger().info("Game ended");
 
-        switch (winReason.getReason()) {
-            case COMPLETE:
+        Component message = ChatUtil.divider().append(Component.newline());
+
+        message = switch (winReason.getReason()) {
+            case COMPLETE -> {
                 PlayerTeam team = winReason.getTeam();
-                message += "                     " + team.getColor() + team.getName()
-                        + ChatColor.WHITE + " team "
-                        + "has gotten bingo!";
-                break;
-            case RANDOM_TIE:
-                // Don't do anything with ties yet
-                message += "                      Game has ended in a tie!";
-                break;
-            case NO_WINNER:
-            default:
-                message += "                            Game has ended!";
-                break;
-        }
+                yield message.append(Component
+                        .text(" ".repeat(21) + team.getName())
+                        .color(team.getColor())
+                ).append(Component
+                        .text(" team has gotten bingo!")
+                        .color(NamedTextColor.WHITE)
+                );
+            }
+            case RANDOM_TIE -> message.append(Component
+                            .text(" ".repeat(22) + "Game has ended in a tie!")
+                            .color(NamedTextColor.WHITE)
+                    );
+            default -> message.append(Component
+                    .text(" ".repeat(30) + "Game has ended!")
+                    .color(NamedTextColor.WHITE)
+            );
+        };
 
-        message += "\n" + DIVIDER;
+        message = message.append(Component.newline()).append(ChatUtil.divider());
 
-        Bukkit.broadcastMessage(message);
+        Bukkit.broadcast(message);
 
         titleManager.sendEndTitle(winReason);
 
@@ -499,13 +545,13 @@ public class Game {
                 ItemStack bingoCardItemStack = bingoCardItemFactory.create(
                         bingoCard,
                         team,
-                        ColorUtil.chatColorToInt(team.getColor())
+                        ColorUtil.textColorToInt(team.getColor())
                 );
 
                 // Change the item name to include team name and color
                 ItemMeta meta = bingoCardItemStack.getItemMeta();
                 if (meta != null) {
-                    meta.setDisplayName(team.getColor() + team.getName() + " Team");
+                    meta.customName(Component.text(team.getName() + " Team").color(team.getColor()));
                 }
                 bingoCardItemStack.setItemMeta(meta);
 
@@ -519,6 +565,7 @@ public class Game {
                 // Set own bingo card in offhand if player has a team
                 Team team = teamManager.getTeamByPlayer(onlinePlayer);
                 if (team != null && !team.isSpectatorTeam()) {
+                    //noinspection SuspiciousMethodCalls
                     onlinePlayer.getInventory().setItemInOffHand(
                             bingoCardItemStacks.get(team)
                     );
@@ -583,6 +630,19 @@ public class Game {
         gameBoardManager.onPregameUpdate(numOnlinePlayers);
     }
 
+    // fallen's fork: add nested item support
+    public void onItemCollected(Player player, ItemStack itemStack) {
+        Team team = teamManager.getTeamByPlayer(player);
+        if (team == null || team.isSpectatorTeam()) {
+            getLogger().warning("Material collected by player without team");
+            return;
+        }
+
+        ItemUtil.iterateItemMaterialNested(itemStack, material -> {
+            this.onMaterialCollected(player, material);
+        });
+    }
+
     /**
      * When a material is collected by a player
      * Updates the bingo card of the player's team and ends the game if a card is completed
@@ -609,14 +669,15 @@ public class Game {
 
             if (config.notifyOtherTeamCompletions()) {
                 // Broadcast a message of this collection
-                Bukkit.getServer().broadcast(
-                        Component.text(
-                                PREFIX +
-                                        collectorTeam.getColor() + collectorTeam.getName()
-                                        + ChatColor.WHITE + " team has obtained "
-                        ).append(
-                                Component.translatable(material.translationKey()).
-                                        color(NamedTextColor.AQUA)
+                Bukkit.broadcast(Component
+                        .text(collectorTeam.getName())
+                        .color(collectorTeam.getColor())
+                        .append(Component
+                                .text(" team has obtained ")
+                                .color(NamedTextColor.WHITE))
+                        .append(Component
+                                .translatable(material.translationKey())
+                                .color(NamedTextColor.AQUA)
                         )
                 );
             }
@@ -642,12 +703,19 @@ public class Game {
                     teamManager.getActiveTeams()
             );
 
+            // fallen's fork: show num & row collected in tab list
+            // update the tablist on game end
+            this.showItemCollectedInTabList();
+
+            // fallen's fork: better bingo item display
+            bingoCard.getBingoCardInventory().rebuildInventory();
+
             if (winners.isEmpty()) {
                 // If the list is empty, the game is not finished yet
                 soundManager.broadcastItemCollected(collectorTeam);
             } else if (winners.size() == 1) {
                 // If there is a single winner, we can announce it
-                end(new WinReason(winners.get(0), WinReason.Reason.COMPLETE));
+                end(new WinReason(winners.getFirst(), WinReason.Reason.COMPLETE));
             } else {
                 // Otherwise, end the game with a random tie
                 end(new WinReason(
@@ -656,8 +724,37 @@ public class Game {
                 );
             }
         }
+    }
 
-        // fallen's fork: show num & row collected in tab list
+    public void onMaterialDropped(PlayerTeam team, Material material) {
+	    if (!bingoCard.checkMaterialDrop(material, team)) {
+            return;
+        }
+
+        gameBoardManager.onItemCollected(team);
+
+        if (config.notifyOtherTeamCompletions()) {
+            // Broadcast a message of this collection
+            Bukkit.getServer().broadcast(Component
+                    .text(team.getName()).color(team.getColor())
+                    .append(Component.text(" team has dropped ").color(NamedTextColor.WHITE))
+                    .append(Component.translatable(material.translationKey()).color(NamedTextColor.AQUA))
+            );
+        }
+
+        if (config.notifyOtherTeamCompletions() || winConditionChecker.getCompletionsToLock() > 0) {
+            // Update the cards of all players in all teams
+            for (PlayerTeam playerTeam : teamManager.getActiveTeams()) {
+                ItemUtil.updateBingoCard(bingoCard, playerTeam, bingoCardItemFactory);
+            }
+        } else {
+            // Update only the bingo card of the players in the team that collected the item
+            ItemUtil.updateBingoCard(bingoCard, team, bingoCardItemFactory);
+        }
+
+        soundManager.broadcastItemDropped(team);
+
+	    // fallen's fork: show num & row collected in tab list
         // update the tablist on game end
         this.showItemCollectedInTabList();
 
@@ -701,8 +798,8 @@ public class Game {
         maintenance = !maintenance;
     }
 
-    public boolean isPvpEnabled() {
-        return pvpEnabled;
+    public boolean isPvpDisabled() {
+        return pvpDisabled;
     }
 
     public BingoCard getBingoCard() {
@@ -710,7 +807,7 @@ public class Game {
     }
 
     public void togglePvp() {
-        pvpEnabled = !pvpEnabled;
+        pvpDisabled = !pvpDisabled;
     }
 
     public JavaPlugin getPlugin() {
@@ -734,6 +831,11 @@ public class Game {
         gameBoardManager.broadcast();
     }
 
+    // fallen's fork: in-game notification by clicking items in the bingo card
+    public void meow(Player player) {
+        soundManager.broadcastNotification(player);
+    }
+
     public enum State {
         PRE_GAME("Pre-game"),
         IN_GAME("In-game"),
@@ -749,5 +851,4 @@ public class Game {
             return name;
         }
     }
-    public void meow(Player player) {soundManager.broadcastnotification(player);}
 }
